--- a/SLAM/SLAM/SLAM.vcxproj.filters
+++ b/SLAM/SLAM/SLAM.vcxproj.filters
@@ -51,14 +51,8 @@
     <ClCompile Include="Scan.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="sdk\src\rplidar_driver.cpp">
-      <Filter>sdk\src</Filter>
-    </ClCompile>
-    <ClCompile Include="sdk\src\arch\win32\net_serial.cpp">
-      <Filter>sdk\src\arch</Filter>
-    </ClCompile>
-    <ClCompile Include="sdk\src\arch\win32\timer.cpp">
-      <Filter>sdk\src\arch</Filter>
+    <ClCompile Include="sdk\src\hal\thread.cpp">
+      <Filter>sdk\src\hal</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -82,38 +76,35 @@
     <ClInclude Include="Scan.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="sdk\include\rplidar.h">
+    <ClInclude Include="sdk\src\hal\abs_rxtx.h">
+      <Filter>sdk\src\hal</Filter>
+    </ClInclude>
+    <ClInclude Include="sdk\src\hal\event.h">
+      <Filter>sdk\src\hal</Filter>
+    </ClInclude>
+    <ClInclude Include="sdk\src\hal\locker.h">
+      <Filter>sdk\src\hal</Filter>
+    </ClInclude>
+    <ClInclude Include="sdk\src\hal\thread.h">
+      <Filter>sdk\src\hal</Filter>
+    </ClInclude>
+    <ClInclude Include="sdk\src\hal\util.h">
+      <Filter>sdk\src\hal</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\rb-rpk-01_rplidar_sdk_v1.4.5\RB-Rpk-01_RPLIDAR_SDK_v1.4.5\sdk\sdk\include\rplidar.h">
       <Filter>sdk\include</Filter>
     </ClInclude>
-    <ClInclude Include="sdk\include\rplidar_cmd.h">
+    <ClInclude Include="..\..\..\..\rb-rpk-01_rplidar_sdk_v1.4.5\RB-Rpk-01_RPLIDAR_SDK_v1.4.5\sdk\sdk\include\rplidar_cmd.h">
       <Filter>sdk\include</Filter>
     </ClInclude>
-    <ClInclude Include="sdk\include\rplidar_driver.h">
+    <ClInclude Include="..\..\..\..\rb-rpk-01_rplidar_sdk_v1.4.5\RB-Rpk-01_RPLIDAR_SDK_v1.4.5\sdk\sdk\include\rplidar_driver.h">
       <Filter>sdk\include</Filter>
     </ClInclude>
-    <ClInclude Include="sdk\include\rplidar_protocol.h">
+    <ClInclude Include="..\..\..\..\rb-rpk-01_rplidar_sdk_v1.4.5\RB-Rpk-01_RPLIDAR_SDK_v1.4.5\sdk\sdk\include\rplidar_protocol.h">
       <Filter>sdk\include</Filter>
     </ClInclude>
-    <ClInclude Include="sdk\include\rptypes.h">
+    <ClInclude Include="..\..\..\..\rb-rpk-01_rplidar_sdk_v1.4.5\RB-Rpk-01_RPLIDAR_SDK_v1.4.5\sdk\sdk\include\rptypes.h">
       <Filter>sdk\include</Filter>
-    </ClInclude>
-    <ClInclude Include="sdk\src\rplidar_driver_serial.h">
-      <Filter>sdk\src</Filter>
-    </ClInclude>
-    <ClInclude Include="sdk\src\sdkcommon.h">
-      <Filter>sdk\src</Filter>
-    </ClInclude>
-    <ClInclude Include="sdk\src\arch\win32\arch_win32.h">
-      <Filter>sdk\src\arch</Filter>
-    </ClInclude>
-    <ClInclude Include="sdk\src\arch\win32\net_serial.h">
-      <Filter>sdk\src\arch</Filter>
-    </ClInclude>
-    <ClInclude Include="sdk\src\arch\win32\timer.h">
-      <Filter>sdk\src\arch</Filter>
-    </ClInclude>
-    <ClInclude Include="sdk\src\arch\win32\winthread.hpp">
-      <Filter>sdk\src\arch</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
